mentor edits made